--- a/css/styles.css
+++ b/css/styles.css
@@ -200,14 +200,18 @@ img{
 
 /*====Start Feature====*/
 
-.feature{
+.feature-text{
+    padding-top: 94px;
+}
+
+.feature-image{
     padding-top: 94px;
     padding-bottom: 94px;
 }
 
+
 .feature-list-items{
     width: 270px;
-
 }
 
 .feature-list{
@@ -335,17 +339,14 @@ img{
 
 /*====Start Project====*/
 
-.filter-container{
+.project{
     padding-top: 94px;
     padding-bottom: 94px;   
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
+
 .project-filter {
-    padding-bottom: 34px;
+    margin-bottom: 50px;
     
     display: flex;
     justify-content: center;
@@ -380,20 +381,10 @@ img{
 }
 
 .project-items-list{
-    padding-top: 34px;
-
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
-
-
-
-    /* display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px; */
 }
 
 .project-list-items{ 
@@ -405,11 +396,12 @@ img{
 
 .project-list-text{ 
     padding: 20px 24px;
-    text-align: center;
+    border: solid #eeeeee;
+    border-width: 0px 1px 1px 1px ;
 }
 
 .project-item{
-    margin-bottom: 10px;
+    margin-bottom: 4px;
 
     font-weight: 700;
     font-size: 18px;
