--- a/css/styles.css
+++ b/css/styles.css
@@ -277,6 +277,9 @@ img{
 .about-team-text{
     padding: 30px 20px;
     text-align: center;
+    
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .about-team-name{
