--- a/css/styles.css
+++ b/css/styles.css
@@ -263,8 +263,6 @@ img{
     background-color: var(--background-color-teme-light);
 }
 
-
-
 .feature-item{
     margin-bottom: 10px;
 
@@ -281,6 +279,11 @@ img{
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color-teme-dark);
+}
+
+.feature-image{
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .feature-list-photos{
@@ -436,6 +439,12 @@ img{
     background-color: var(--background-color-teme-dark);
 }
 
+.footer-container{
+    display: flex;
+    align-items: baseline;
+    flex-direction: column;
+}
+
 .footer-container>.logo-link{
     color: var(--primery-text-color-teme-dark);
 }
@@ -464,22 +473,31 @@ img{
     opacity: 0.6;
 }
 
+.footer-links-container{
+    gap: 20px;
+
+    display: flex;
+    margin-left: 70px;
+    /* align-items: center; */
+    align-items: baseline;
+    flex-direction: column;
+}
+
+.footer-links-container>.footer-links-title{
+    color: var(--primery-text-color-teme-dark);
+}
 
 .footer-links-container .social-list-link {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
 
-
-.footer-links-container{
-    display: flex;
-    margin-left: 70px;
-    align-items: center;
+.social-list-link:hover .footer-links-container,
+.social-list-link:focus .footer-links-container{
+    background-color: var(--accent-color);
+    fill: var(--primery-text-color-teme-dark);
 }
 
-.footer-links-container>.footer-links-title{
-    color: var(--primery-text-color-teme-dark);
-}
 /*====End Footer====*/
 
 /*====Start Project====*/
@@ -544,13 +562,17 @@ img{
 }
 
 
-.project-list-items:hover{ 
+.project-list{
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.project-list:hover{ 
     box-shadow: 
         0px 1px 1px rgba(0, 0, 0, 0.12), 
         0px 4px 4px rgba(0, 0, 0, 0.06), 
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
 
 
 .project-list-text{ 
