--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,11 @@ img{
 
 .contact-mail, 
 .contact-phone {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -561,19 +566,18 @@ img{
     border-bottom: var(--secondary-text-color-teme-light);    
 }
 
-
 .project-list{
     display: block;
     width: 100%;
     height: 100%;
 }
+
 .project-list:hover{ 
     box-shadow: 
         0px 1px 1px rgba(0, 0, 0, 0.12), 
         0px 4px 4px rgba(0, 0, 0, 0.06), 
         1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
 
 .project-list-text{ 
     padding: 20px 24px;
