--- a/css/styles.css
+++ b/css/styles.css
@@ -596,7 +596,14 @@ img{
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: transparent;
+    fill: var(--primery-text-color-teme-light);
     cursor: pointer;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus{
+    fill: var(--accent-color);
+
 }
 
 /*====End Modal-button====*/
