--- a/css/styles.css
+++ b/css/styles.css
@@ -486,11 +486,10 @@ img{
 .footer-container{
     display: flex;
     align-items: baseline;
-    /* flex-direction: column; */
 }
 
-.contact-address>.logo-link{
-    margin-bottom: 20px;
+.footer-contacts-container>.logo-link{
+    /* margin-bottom: 20px; */
     
     color: var(--primery-text-color-teme-dark);
 }
@@ -680,6 +679,12 @@ img{
     height: 100%;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    overflow: hidden;
+}
+
+.project-list:hover .overlay {
+    transform: translateY(0);
 }
 
 .project-overlay{
@@ -689,19 +694,24 @@ img{
     width: 100%;
     height: 100%;
 
-    background-color: var(--accent-color);
-    transform: translateY(0);
+    background-color: rgba(33, 150, 243, 0.9);;
+    transform: translateY(-100%);
 
-    opacity: 0;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-overlay:hover{
-    opacity: 1;
+
+.project-overlay>span{
+    font-family: var(--primery-font-family);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--primery-text-color-teme-dark);
 }
 
-.project-list:hover, 
-.project-list:focus{ 
+.project-list:hover{ 
     box-shadow: 
         0px 1px 1px rgba(0, 0, 0, 0.12), 
         0px 4px 4px rgba(0, 0, 0, 0.06), 
