--- a/css/styles.css
+++ b/css/styles.css
@@ -322,9 +322,9 @@ img{
     width: 100%;
     height: 70px;
 
-
-    text-align: center;
+    display: flex;
     align-items: center;
+    justify-content: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
@@ -567,6 +567,8 @@ img{
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+
+    transition: scale(0);
 }
 
 .modal{
@@ -578,6 +580,8 @@ img{
     width: 528px;
     height: 580px;
     background-color: var(--primery-text-color-teme-dark);
+
+    transition: scale (1);
 }
 
 .modal-close-btn{
