--- a/css/styles.css
+++ b/css/styles.css
@@ -561,14 +561,32 @@ img{
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+        @keyframes animate075 {
+            0% {
+                transform: scale(1);
+            }
+    
+            50% {
+                transform: scale(0.75);
+            }
+    
+            100% {
+                transform: scale(1);
+            }
+        }
+
+
 
 .backdrop.is-hidden{
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
 
-    transition: scale(0);
+    animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal{
@@ -581,7 +599,11 @@ img{
     height: 580px;
     background-color: var(--primery-text-color-teme-dark);
 
-    transition: scale (1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal{
+    transform: scale 0.75;
 }
 
 .modal-close-btn{
@@ -676,18 +698,20 @@ img{
 }
 
 .project-list{
-    position: relative;
-
     display: block;
     width: 100%;
     height: 100%;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+}
+
+.project-wrapper{
+    position: relative;
+
     overflow: hidden;
 }
 
-.project-list:hover .overlay {
+.project-wrapper:hover .overlay{
     transform: translateY(0);
 }
 
@@ -698,14 +722,16 @@ img{
     width: 100%;
     height: 100%;
 
-    background-color: rgba(33, 150, 243, 0.9);;
-    transform: translateY(-100%);
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(100%);
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .project-overlay>span{
+    padding: 24px 63px;
+
     font-family: var(--primery-font-family);
     font-style: normal;
     font-weight: 400;
