--- a/css/styles.css
+++ b/css/styles.css
@@ -563,21 +563,21 @@ img{
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    transform: scale(1);
 }
 
-        @keyframes animate075 {
-            0% {
-                transform: scale(1);
-            }
-    
-            50% {
-                transform: scale(0.75);
-            }
-    
-            100% {
-                transform: scale(1);
-            }
-        }
+@keyframes animate075 {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(0.75);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
 
 
 
@@ -586,7 +586,7 @@ img{
     visibility: hidden;
     pointer-events: none;
 
-    animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .modal{
@@ -603,7 +603,7 @@ img{
 }
 
 .backdrop.is-hidden .modal{
-    transform: scale 0.75;
+    transform: scale(0.5);
 }
 
 .modal-close-btn{
@@ -703,15 +703,19 @@ img{
     height: 100%;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.project-wrapper{
     position: relative;
-
+        
     overflow: hidden;
 }
 
-.project-wrapper:hover .overlay{
+/* .project-wrapper{
+    position: relative;
+
+    overflow: hidden;
+} */
+
+.project-list:hover .overlay {
     transform: translateY(0);
 }
 
@@ -729,7 +733,7 @@ img{
 }
 
 
-.project-overlay>span{
+.project-overlay>p{
     padding: 24px 63px;
 
     font-family: var(--primery-font-family);
