--- a/css/styles.css
+++ b/css/styles.css
@@ -562,12 +562,12 @@ img{
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 
-    transform: scale(1);
+    /* transform: scale(1); */
 }
 
-@keyframes animate075 {
+/* @keyframes animate075 {
     0% {
         transform: scale(1);
     }
@@ -577,7 +577,7 @@ img{
     100% {
         transform: scale(1);
     }
-}
+} */
 
 
 
@@ -593,17 +593,24 @@ img{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
 
     width: 528px;
     height: 580px;
     background-color: var(--primery-text-color-teme-dark);
 
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* transform: scale(1); */
+
+    opacity: 1;
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    tranform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal{
+    opacity: 0;
     transform: scale(0.5);
+
 }
 
 .modal-close-btn{
@@ -704,18 +711,15 @@ img{
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.project-wrapper{
     position: relative;
-        
+
     overflow: hidden;
 }
 
-/* .project-wrapper{
-    position: relative;
-
-    overflow: hidden;
-} */
-
-.project-list:hover .overlay {
+.project-wrapper:hover .project-overlay {
     transform: translateY(0);
 }
 
@@ -733,8 +737,8 @@ img{
 }
 
 
-.project-overlay>p{
-    padding: 24px 63px;
+.project-text{
+    padding: 62px 24px;
 
     font-family: var(--primery-font-family);
     font-style: normal;
