--- a/css/styles.css
+++ b/css/styles.css
@@ -561,56 +561,29 @@ img{
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    /* animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-
-    /* transform: scale(1); */
 }
-
-/* @keyframes animate075 {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(0.75);
-    }
-    100% {
-        transform: scale(1);
-    }
-} */
-
-
 
 .backdrop.is-hidden{
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-
-    /* animation: animate075 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .modal{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(0);
+    transform: translate(-50%, -50%) scale(1);
 
     width: 528px;
     height: 580px;
     background-color: var(--primery-text-color-teme-dark);
 
-    /* transform: scale(1); */
-
-    opacity: 1;
-
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-    tranform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal{
-    opacity: 1;
-    transform: scale(1);
-
+    transform: translate(-50%, -50%) scale(0.75);
 }
 
 .modal-close-btn{
@@ -719,7 +692,7 @@ img{
     overflow: hidden;
 }
 
-.project-wrapper:hover .project-overlay {
+.project-list:hover .project-overlay {
     transform: translateY(0);
 }
 
