--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,17 @@ img{
     color: var(--accent-color);
 }
 
+.visuality-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(0 0 0 0);
+    overflow: hidden;
+}
 /*====Start Header====*/
 
 .page-header{
@@ -545,6 +556,101 @@ img{
     background-color: var(--accent-color);
 }
 
+.footer-subscription-container {
+    gap: 20px;
+
+    display: flex;
+    margin-left: 70px;
+    /* align-items: center; */
+    align-items: baseline;
+    flex-direction: column;
+}
+
+.footer-subscription-container>.footer-links-title {
+    text-transform: uppercase;
+    color: var(--primery-text-color-teme-dark);
+}
+
+.subscription-form-field {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.subscription-input-wrapper{
+    display: flex;
+}
+
+.subscription-input-wrapper:not(:last-child){
+    margin-left: 12px;
+}
+
+.subscription-form-input {
+    width: 358px;
+    height: 50px;
+    padding-left: 16px;
+
+    background-color: inherit;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscription-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+} 
+
+.subscription-form-submit-btn {
+    /* display: block;
+    margin: 0 auto; */
+    position: relative;
+
+    margin: 10px 28px;
+    border: 1px solid var(--accent-color);
+    background-color: var(--accent-color);
+    border-radius: 4px;
+
+    font-family: var(--primery-font-family);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: var(--primery-text-color-teme-dark);
+    text-transform: none;
+    cursor: pointer;
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscription-form-submit-btn:hover,
+.subscription-form-submit-btn:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscription-form-submit-btn:focus+.subscription-icon {
+    fill: var(--primery-text-color-teme-dark);
+}
+
+.subscription-icon {
+    position: absolute;
+    top: 50%;
+    left: 0;
+
+    /* transform: translateY(50%); */
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+
+
+
+
+
 /*====End Footer====*/
 
 
@@ -563,6 +669,8 @@ img{
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Надо раскомментитить перед отправкой! */
+
 .backdrop.is-hidden{
     opacity: 0;
     visibility: hidden;
@@ -577,9 +685,12 @@ img{
 
     width: 528px;
     height: 580px;
+    border-radius: 4px;
     background-color: var(--primery-text-color-teme-dark);
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+    padding: 40px;
 }
 
 .backdrop.is-hidden .modal{
@@ -609,6 +720,168 @@ img{
 .modal-close-btn:focus{
     fill: var(--accent-color);
 
+}
+
+
+
+.modal-header{
+    margin-bottom: 12px;
+
+    font-family: var(--primery-font-family);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.12;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color-teme-light);
+}
+
+.contact-text-name{
+    font-family: var(--primery-font-family);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    
+    color: var(--secondary-text-color-teme-dark);
+}
+
+.contact-form-field{
+    display: block;
+    margin-bottom: 20px;
+}
+
+.contact-form-input-wrapper{
+    position: relative;
+    display: block;
+    margin-top: 4px;
+}
+
+.contact-form-input{
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:focus{
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.contact-form-input:focus + .contact-form-icon{
+    fill: var(--accent-color);
+}
+
+.contact-form-icon{
+    position: absolute;
+    top: 50%;
+    left: 12px;
+
+    transform: translateY(-50%);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-message{
+    width: 100%;
+    height: 96px;
+    margin-top: 4px;
+    padding: 12px 16px;
+
+    resize: none;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-message:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.contact-form-message::placeholder{
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.contact-form-checkbox-wrapper{
+    margin-bottom: 30px;
+}
+
+
+.contact-form-checkbox-label{
+    display: flex;
+    align-items: center;
+
+    font-family: var(--primery-font-family);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    
+    color: var(--secondary-text-color-teme-dark);
+}
+
+.contact-form-checkbox-label>a{
+    color: var(--accent-color);
+}
+
+.contact-form-checkbox-label::before{
+    content: '';
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border: 1px solid var(--secondary-text-color-teme-light);
+    cursor: pointer;
+
+    margin-right: 10px;
+}
+
+.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+    background-image: url(../images/icon-check.svg);
+    border: var(--accent-color)
+    /* background-color: var(--accent-color);
+    box-shadow: 0 0 0 4px; */
+}
+
+.contact-form-checkbox:focus+.contact-form-checkbox-label::before{
+    outline: 1px solid var(--accent-color);
+}
+
+.contact-form-submit-btn {
+    display: block;
+    margin: 0 auto;
+
+    padding: 10px 52px;
+    border: 1px solid var(--accent-color);
+    background-color: var(--accent-color);
+    border-radius: 4px;
+
+    font-family: var(--primery-font-family);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: var(--primery-text-color-teme-dark);
+    text-transform: none;
+    cursor: pointer;
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-submit-btn:hover,
+.contact-form-submit-btn:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /*====End Modal-button====*/
